spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-configuration-watcher-it/src/test/resources/spring-cloud-kubernetes-configuration-watcher-it-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-configuration-watcher-it-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-configuration-watcher-it
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-configuration-watcher-it
    spec:
      containers:
        - name: spring-cloud-kubernetes-configuration-watcher-it
          image: localhost:5000/spring-cloud-kubernetes-configuration-watcher-it:2.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          env:
            - name: SPRING_RABBITMQ_HOST
              value: rabbitmq-service
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
