spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-configuration-watcher-it/src/test/resources/spring-cloud-kubernetes-configuration-watcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-configuration-watcher
  name: spring-cloud-kubernetes-configuration-watcher
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    app: spring-cloud-kubernetes-configuration-watcher
  type: ClusterIP
